# Smart_Calendar

desktop_qt/: CMakeLists.txt  README.md
desktop_qt/src/: CustomWebPage.cpp  CustomWebPage.h  DesktopApp.cpp  DesktopApp.h  LocalWebServer.cpp  LocalWebServer.h  main.cpp
desktop_qt/tests/: smoke_test.cpp
web_frontend/: README.md  TESTING_RECURRENCE.md  index.html  package-lock.json  package.json  vite.config.ts
web_frontend/src/: main.tsx  styles.css
web_frontend/src/app/: api.ts  auth.ts  calendarContext.tsx  confirm.tsx  eventUtils.ts  rbac.ts  recurrenceActions.ts  router.tsx  theme.ts  toast.tsx  types.ts
web_frontend/src/app/__tests__/: api_client.test.ts  auth.test.ts  displayName.test.ts  rbac.test.ts  recurrenceActions.test.ts  theme.test.ts
web_frontend/src/components/: Layout.tsx  RecurrenceEditor.tsx  RecurrenceScopeModal.tsx
web_frontend/src/i18n/: ru.ts
web_frontend/src/pages/: CalendarsPage.tsx  EventEditorPage.tsx  LoginPage.tsx  MembersPage.tsx  MonthPage.tsx  RegisterPage.tsx  TaskPage.tsx
